UI-2895: fix various issues with ledger display, sort issue with quantity not treated as numbers, tab not showing up, sum recomputed each time we loaded more data

--- a/src/apps/myaccount/submodules/balance/balance.scss
+++ b/src/apps/myaccount/submodules/balance/balance.scss
@@ -67,10 +67,6 @@
 	font-size: 12px;
 }
 
-.balance-content-wrapper .tab-type-ledger {
-	display: none;
-}
-
 /* TABLES */
 .balance-content-wrapper table {
 	margin-bottom: 35px;
